k8s/service.yaml
apiVersion: v1

kind: Service
metadata:
  name: face-type-recommender
  namespace: face-type-ai

spec:
  type: ClusterIP
  selector:
    app: face-type-recommender
  ports: 
   - name: http 
     port: 7860
     targetPort: 7860
